# zephyr

include/zephyr/bluetooth/: bluetooth.h  hci_types.h
scripts/coccinelle/: bt_conn_le_create.cocci
subsys/bluetooth/controller/ll_sw/nordic/hal/nrf5/radio/: radio_nrf5.h  radio_nrf5_dppi.h  radio_nrf5_ppi.h
subsys/bluetooth/host/: Kconfig  conn.c  hci_core.c  id.c  scan.c
tests/bluetooth/host/address/: CMakeLists.txt  prj_privacy.conf  prj_privacy_scan_identity.conf  prj_scan_identity.conf  testcase.yaml
tests/bluetooth/host/address/include/: controller.h
tests/bluetooth/host/address/src/: controller.c  main.c
tests/bluetooth/host/adv_addr/: prj.conf  prj_privacy.conf  prj_privacy_scan_identity.conf  prj_scan_identity.conf
tests/bluetooth/host/adv_addr/include/: mocked_controller.h
tests/bluetooth/host/adv_addr/src/: main.c  mocked_controller.c
tests/bluetooth/host/scan/: CMakeLists.txt  testcase.yaml
tests/bluetooth/host/scan/src/: main.c
tests/bsim/bluetooth/host/iso/cis/: prj.conf
tests/bsim/bluetooth/host/misc/disable/src/: main_disable.c
tests/bsim/bluetooth/host/misc/simple_test_pass_fails/src/: main.c
tests/bsim/bluetooth/host/misc/simple_test_pass_fails/tests_scripts/: test.sh
